Add the settings for the dashboard, and the navigator.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=42000
-spring.thymeleaf.cache=true
+spring.thymeleaf.cache=false
+
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.url=jdbc:hsqldb:file:${vis.data.system.jdbc.hsqldb.file}
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.schema=
 
 vis.data.system.jdbc.driverClassName=org.hsqldb.jdbcDriver
 vis.data.system.jdbc.url=jdbc:hsqldb:file:${vis.data.system.jdbc.hsqldb.file}
