--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,16 @@
         </dependency>
 
         <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>oracle</groupId>
             <artifactId>ojdbc6</artifactId>
