--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=42000
+flyway.validateOnMigrate=false
 spring.thymeleaf.cache=false
 
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
